--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
       <!--manual navigation end-->
     </div>
     <!--image slider end-->
-
-    <script type="text/javascript">
-    var counter = 1;
-    setInterval(function(){
-      document.getElementById('radio' + counter).checked = true;
-      counter++;
-      if(counter > 4){
-        counter = 1;
-      }
-    }, 5000);
-    </script>
+    <script src="app.js" async defer></script>
 
   </body>
 </html>
